--- a/static/index.html
+++ b/static/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        
+  <head>
     <meta charset="UTF-8" />
-        
     <title>Catdex</title>
-        
-    <link rel="stylesheet" href="static/css/index.css" type="text/css" />
-      
+    <link rel="stylesheet" href="css/index.css" type="text/css">
   </head>
-    
   <body>
-        
     <h1>Catdex</h1>
-        
-    <section class="cats">
-      18Chapter 2 Developing Websites       
-      <article class="cat">
-                
-        <h3>British short hair</h3>
-                <img src="static/image/british-short-hair.jpg" />       
-      </article>
-            
-      <article class="cat">
-                
-        <h3>Persian</h3>
-                <img src="static/image/persian.jpg" />       
-      </article>
-            
-      <article class="cat">
-                
-        <h3>Ragdoll</h3>
-                <img src="static/image/ragdoll.jpg" />       
-      </article>
-          
+    <p>
+      <a href="/add.html">Add a new cat</a>
+    </p>
+
+    <section class="cats" id="cats">
+      <p>No cats yet</p>
     </section>
-      
+    <script charset="utf-8">
+      document.addEventListener("DOMContentLoaded", () => {
+        fetch('/api/cats')
+          .then((response) => response.json())
+          .then((cats) => {
+             document.getElementById("cats").innerText = "" // Clear the "No cats yet"
+             for (cat of cats) {
+               const catElement = document.createElement("article")
+               catElement.classList.add("cat")
+               const catTitle = document.createElement("h3")
+               const catLink = document.createElement("a")
+               catLink.innerText = cat.name
+               catLink.href = `/cat.html?id=${cat.id}`
+               const catImage = document.createElement("img")
+               catImage.src = cat.image_path // TODO: remove the static prefix
+
+               catTitle.appendChild(catLink)
+               catElement.appendChild(catTitle)
+               catElement.appendChild(catImage)
+
+               document.getElementById("cats").appendChild(catElement)
+             }
+          })
+      })
+    </script>
   </body>
 </html>
